<resources>
    <string name="app_name">IQTQ</string>
    <string name="appTitle">IQTQ</string>
    <!--activity_splash_screen-->
    <string name="appSlogan">Aplikacja do znajdowania współgraczy</string>
    <!--activity_main-->
    <string name="imageViewLogo">"Logo"</string>
    <string name="appDesc">Witamy! Utwórz konto, aby dołączyć do społeczności i znaleźć nowe osoby do ulubionych gier online.</string>
    <string name="buttonRegisterEmail">UTWÓRZ KONTO</string>
    <string name="buttonRegisterFacebook">FACEBOOK</string>
    <!--activity_register-->
    <string name="textViewRegister">REJESTRACJA</string>
    <string name="textViewNewAcc">Stwórz nowe konto:</string>
    <string name="editTextUsername">Nazwa użytkownika</string>
    <string name="editTextPassword">Hasło</string>
    <string name="editTextRepeatPassword">Powtórz Hasło</string>
    <string name="editTextEmail">E-mail</string>
    <string name="checkBoxTerms">Akceptuje regulamin oraz politykę prywatności</string>
    <string name="buttonRegister">ZAREJESTRUJ</string>
    <string name="textViewAlreadyLogin">Jesteś już zarejestrowany? Zaloguj się</string>
    <string name="textViewAllTerms"></string>
    <!--activity_login-->
    <string name="textViewLogin">Zaloguj się</string>
    <string name="buttonLogin">ZALOGUJ</string>
    <string name="textViewForgot">Nie pamiętam hasła</string>
    <string name="checkBoxRememberMe">Zapamiętaj mnie</string>
    <!--activity_forgot_password-->
    <string name="textViewResetPass">ZRESETUJ SWOJE HASŁO</string>
    <string name="textViewForgotEmail">Wpisz adres e-mail:</string>
    <string name="buttonForgot">ZRESETUJ</string>
    <!--activity_after_register-->
    <string name="textViewAftRegister">DODATKOWE INFORMACJE</string>
    <string name="textViewContRegister">Uzupełnij dodatkowe informacje:</string>
    <string name="editTextName">Imię:</string>
    <string name="editTextAge">Podaj wiek:</string>
    <string name="textViewAddPic">Dodaj awatar:</string>
    <string name="buttonEndReg">Dokończ rejestrację</string>
    <!--activity_dashboard-->
    <string name="editTextAppName">IQTQ</string>
    <string name="buttonFindPeople">ZNAJDŹ GRACZY</string>
    <string name="buttonGoProfile">PROFIL</string>
    <string name="buttonAbout">O APLIKACJI</string>
    <string name="buttonSettings">USTAWIENIA</string>
    <string name="buttonLogout">WYLOGUJ SIĘ</string>
    <!--activity_game_choice-->
    <string name="textViewChooseGame">WYBIERZ GRĘ:</string>
    <!--activity_my_profile-->
    <string name="editTextProfile">MÓJ PROFIL</string>
    <string name="textViewProfileUsername">Użytkownik:</string>
    <string name="textViewCountry">Kraj:</string>
    <string name="textViewAge">Wiek:</string>
    <string name="textViewUserGames">GRY UŻYTKOWNIKA</string>
    <string name="textViewAddGame">DODAJ GRĘ</string>
    <!--prefHours_data-->
    <string name="textViewPrefHoursMorning">Rano</string>
    <string name="textViewPrefHoursAfternoon">Po południu</string>
    <string name="textViewPrefHoursEvening">Wieczorem</string>
    <string name="textViewPrefHoursNight">W nocy</string>
    <!--activity_csgo_data-->
    <string name="textViewAddCsgoInfo">COUNTER STRIKE: GLOBAL OFFENSIVE</string>
    <string name="textViewCsgoNick">Podaj nick na Steam:</string>
    <string name="textViewCsgoUseMic">Komunikacja przez mikrofon:</string>
    <string name="textViewCsgoPrefHours">Wybierz preferowane godziny:</string>
    <string name="textViewCsgoRank">Wybierz rangę:</string>
    <string name="textViewCsgoDesc">Dodaj opis (80 znaków):</string>
    <string name="buttonAddCsgo">DODAJ GRĘ</string>
    <!--activity_lol_data-->
    <string name="textViewAddLolInfo">LEAGUE OF LEGENDS</string>
    <string name="textViewLolNick">Podaj nick na Riot Games:</string>
    <string name="textViewLolUseMic">Komunikacja przez mikrofon:</string>
    <string name="textViewLolPrefHours">Wybierz preferowane godziny:</string>
    <string name="textViewLolRank">Wybierz rangę:</string>
    <string name="textViewLolDesc">Dodaj opis (80 znaków):</string>
    <string name="buttonAddLol">DODAJ GRĘ</string>
    <!--activity_fortnite_data-->
    <string name="textViewAddFortniteInfo">FORTNITE</string>
    <string name="textViewFortniteNick">Podaj nick na Epic Games:</string>
    <string name="textViewFortniteUseMic">Komunikacja przez mikrofon:</string>
    <string name="textViewFortnitePrefHours">Wybierz preferowane godziny:</string>
    <string name="textViewFortniteRank">Wybierz poziom umiejętności:</string>
    <string name="textViewFortniteDesc">Dodaj opis (80 znaków):</string>
    <string name="buttonAddFortnite">DODAJ GRĘ</string>
    <!--activity_among_us_data-->
    <string name="textViewAddAmongUsInfo">AMONG US</string>
    <string name="textViewAmongUsNick">Podaj nick na Discord:</string>
    <string name="textViewAmongUseMic">Komunikacja przez mikrofon:</string>
    <string name="textViewAmongUsPrefHours">Wybierz preferowane godziny:</string>
    <string name="textViewAmongUsRank">Wybierz poziom umiejętności:</string>
    <string name="textViewAmongUsDesc">Dodaj opis (80 znaków):</string>
    <string name="buttonAddAmongUs">DODAJ GRĘ</string>
    <!--activity_pubg_data-->
    <string name="textViewAddPubgInfo">PLAYERUNKNOWN BATTLEGROUNDS</string>
    <string name="textViewPubgNick">Podaj nick na Steam:</string>
    <string name="textViewPubgUseMic">Komunikacja przez mikrofon:</string>
    <string name="textViewPubgPrefHours">Wybierz preferowane godziny:</string>
    <string name="textViewPubgRank">Wybierz rangę:</string>
    <string name="textViewPubgDesc">Dodaj opis (80 znaków):</string>
    <string name="buttonAddPubg">DODAJ GRĘ</string>
    <!--activity_apex_data-->
    <string name="textViewAddApexInfo">APEX: LEGENDS</string>
    <string name="textViewApexNick">Podaj nick na Steam:</string>
    <string name="textViewApexUseMic">Komunikacja przez mikrofon:</string>
    <string name="textViewApexPrefHours">Wybierz preferowane godziny:</string>
    <string name="textViewApexRank">Wybierz rangę:</string>
    <string name="textViewApexDesc">Dodaj opis (80 znaków):</string>
    <string name="buttonAddApex">DODAJ GRĘ</string>
    <!--activity_players-->
    <string name="textViewPlayersFilter">Filtruj</string>
    <!--popup_window-->
    <string name="textViewPopupWindowNick">Nick:</string>
    <string name="textViewPopupWindowNickSteam">Nick Steam:</string>
    <string name="textViewPopupWindowNickDiscord">Nick Discord:</string>
    <string name="textViewPopupWindowNickRiotGames">Nick Riot Games:</string>
    <string name="textViewPopupWindowNickOrigin">Nick Origin:</string>
    <string name="textViewPopupWindowNickEpicGames">Nick Epic Games:</string>
    <string name="textViewPopupWindowRank">Ranga:</string>
    <string name="textViewPopupWindowMic">Mikrofon:</string>
    <string name="textViewPopupWindowHours">Godziny:</string>
    <string name="textViewPopupWindowDesc">Opis:</string>
    <string name="buttonPopupWindowBack">Wróć</string>
    <!--filter_popup_window-->
    <string name="textViewFilterPopupWindowTitle">FILTRUJ NA PODSTAWIE:</string>
    <string name="textViewFilterPopupWindowCountry">Kraj:</string>
    <string name="textViewFilterPopupWindowAge">Wiek:</string>
    <string name="editTextFilterPopupWindowAgeHint">Brak Filtru - Podaj wiek</string>
    <string name="textViewFilterPopupWindowRank">Ranga:</string>
    <string name="textViewFilterPopupWindowMic">Mikrofon:</string>
    <string name="textViewFilterPopupWindowHours">Godziny:</string>
    <!--activity_settings-->
    <string name="textViewSettings">USTAWIENIA</string>
    <string name="buttonChangePassword">ZMIEŃ HASŁO</string>
    <string name="buttonChangeProfile">ZMIEŃ DANE PROFILOWE</string>
    <string name="buttonDeleteAccount">USUŃ KONTO</string>
    <!--activity_reset_password-->
    <string name="editTextOldPassword">Podaj stare hasło</string>
    <string name="editTextNewPassword">Podaj nowe hasło</string>
    <string name="editTextRepeatNewPass">Powtórz nowe hasło</string>
    <string name="textViewNewPassword">ZMIEŃ HASŁO</string>
    <!--activity_change_profile_data-->
    <string name="textViewProfileData">ZMIEŃ DANE PROFILOWE</string>
    <string name="buttonUpdate">ZAKTUALIZUJ</string>
    <!--activity_delete_account-->
    <string name="textViewDeleteAccount">USUŃ KONTO</string>
    <string name="editTextDeleteAccountPassword">Podaj Hasło</string>
    <string name="editTextDeleteAccountRepeatPassword">Powtórz hasło</string>
    <string name="buttonDeleteAccountConfirm">ZATWIERDŹ</string>
    <!--activity_about-->
    <string name="textViewAbout">Aplikacja została stworzona na potrzeby pracy dyplomowej na Uniwersytecie Kazimierza Wielkiego przez Tomasza Grużewskiego i Mateusza Szymańskiego</string>


    <!--preferences-->
    <string name="autoLoginPreferenceName">autoLogin</string>
</resources>