<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgtest3"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="10">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:padding="10dp">

            <TextView
                android:id="@+id/textViewRegister"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                android:gravity="center"
                android:text="@string/textViewRegister"
                android:fontFamily="sans-serif-light"
                android:textColor="#FFFFFF"
                android:textSize="55sp" />


        </RelativeLayout>


        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="326dp"
            android:layout_height="53dp"
            android:layout_marginTop="40dp"
            android:autofillHints=""
            android:backgroundTint="#FFFFFF"
            android:hint="@string/editTextUsername"
            android:inputType="textPersonName"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="326dp"
            android:layout_height="53dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="@string/editTextPassword"
            android:inputType="textPassword"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="326dp"
            android:layout_height="53dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="@string/editTextEmail"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="false"
            android:gravity="center"
            android:singleLine="false"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/checkBoxTerms"
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextEmail"
            android:layout_marginStart="5dp"
            android:layout_marginTop="30dp"
            android:text="@string/checkBoxTerms"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />



        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="209dp"
            android:layout_height="57dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_bg"
            android:fontFamily="sans-serif-light"
            android:text="@string/buttonRegister"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#424242"
            android:textSize="24sp"
            android:textStyle="bold" />



        <TextView
            android:id="@+id/textViewLogin"
            android:layout_width="361dp"
            android:layout_height="34dp"
            android:layout_marginTop="25dp"
            android:text="@string/textViewAlreadyLogin"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewAllTerms"
            android:layout_width="361dp"
            android:layout_height="34dp"
            android:layout_marginTop="25dp"
            android:text="@string/textViewAllTerms"
            android:textColor="#FFFFFF"
            android:textAlignment="center"
            android:textSize="16sp" />



    </LinearLayout>


</ScrollView>