<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:gravity="center"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:weightSum="10">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:padding="10dp">

            <TextView
                android:id="@+id/textViewAddApexInfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/textViewAddApexInfo"
                android:fontFamily="sans-serif-light"
                android:textColor="#FFFFFF"
                android:textSize="38sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="30dp"
            android:layout_height="3dp"
            android:background="@android:color/white"/>



        <TextView
            android:id="@+id/textViewApexNick"
            android:layout_width="306dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/textViewApexNick"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editTextApexNick"
            android:layout_width="326dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:backgroundTint="#FFFFFF"
            android:inputType="textPersonName"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:textSize="19sp" />


        <TextView
            android:id="@+id/textViewApexUseMic"
            android:layout_width="306dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/textViewApexUseMic"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/spinnerApexUseMic"
            android:background="@drawable/spinner_bg"
            android:layout_width="318dp"
            android:layout_height="53dp"
            android:textSize="19sp" />


        <TextView
            android:id="@+id/textViewApexPrefHours"
            android:layout_width="306dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/textViewApexPrefHours"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center">

            <Button
                android:id="@+id/buttonApexPrefHoursMorning"
                android:layout_width="77dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg"
                android:layout_marginHorizontal="2dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/textViewPrefHoursMorning"
                android:textColor="#424242"
                android:textSize="10.5sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/buttonApexPrefHoursAfternoon"
                android:layout_width="77dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg"
                android:layout_marginHorizontal="2dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/textViewPrefHoursAfternoon"
                android:textColor="#424242"
                android:textSize="10.5sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonApexPrefHoursEvening"
                android:layout_width="77dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg"
                android:layout_marginHorizontal="2dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/textViewPrefHoursEvening"
                android:textColor="#424242"
                android:textSize="10.5sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonApexPrefHoursNight"
                android:layout_width="77dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg"
                android:layout_marginHorizontal="2dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/textViewPrefHoursNight"
                android:textColor="#424242"
                android:textSize="10.5sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/textViewApexRank"
            android:layout_width="306dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/textViewApexRank"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/spinnerApexRank"
            android:background="@drawable/spinner_bg"
            android:layout_width="318dp"
            android:layout_height="53dp"
            android:textSize="19sp"
            />

        <TextView
            android:id="@+id/textViewApexBio"
            android:layout_width="306dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/textViewApexDesc"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editTextApexDesc"
            android:inputType="textMultiLine"
            android:maxLength="80"
            android:gravity="center_horizontal"
            android:lines="3"
            android:minLines="1"
            android:maxLines="5"
            android:layout_height="wrap_content"
            android:layout_width="318dp"
            android:scrollbars="vertical"
            android:backgroundTint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:textSize="19sp" />

        <Button
            android:id="@+id/buttonAddApex"
            android:layout_width="209dp"
            android:layout_height="65dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/button_bg"
            android:fontFamily="sans-serif-light"
            android:text="@string/buttonAddApex"
            android:textColor="#424242"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>