<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:gravity="center"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:weightSum="10">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:padding="10dp">

        <TextView
            android:id="@+id/textViewAddCsgoInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/textViewAddCsgoInfo"
            android:fontFamily="sans-serif-light"
            android:textColor="#FFFFFF"
            android:textSize="32sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="30dp"
            android:layout_height="3dp"
            android:background="@android:color/white"/>

        <TextView
            android:id="@+id/textViewCsgoNick"
            android:layout_width="306dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/textViewCsgoNick"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editTextCsgoNick"
            android:layout_width="326dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:backgroundTint="#FFFFFF"
            android:inputType="textPersonName"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:textSize="19sp"
            android:autofillHints="" />


        <TextView
            android:id="@+id/textViewCsgoUseMic"
            android:layout_width="306dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/textViewCsgoUseMic"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/spinnerCsgoUseMic"
            android:background="@drawable/spinner_bg"
            android:layout_width="318dp"
            android:layout_height="53dp"
            android:autofillHints=""
            android:textSize="19sp"
            />


        <TextView
            android:id="@+id/textViewCsgoPrefHours"
            android:layout_width="306dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/textViewCsgoPrefHours"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center">

            <Button
                android:id="@+id/buttonCsgoPrefHoursMorning"
                android:layout_width="77dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg"
                android:layout_marginHorizontal="2dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/textViewPrefHoursMorning"
                android:textColor="#424242"
                android:textSize="10.5sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/buttonCsgoPrefHoursAfternoon"
                android:layout_width="77dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg"
                android:layout_marginHorizontal="2dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/textViewPrefHoursAfternoon"
                android:textColor="#424242"
                android:textSize="10.5sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonCsgoPrefHoursEvening"
                android:layout_width="77dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg"
                android:layout_marginHorizontal="2dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/textViewPrefHoursEvening"
                android:textColor="#424242"
                android:textSize="10.5sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonCsgoPrefHoursNight"
                android:layout_width="77dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg"
                android:layout_marginHorizontal="2dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/textViewPrefHoursNight"
                android:textColor="#424242"
                android:textSize="10.5sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/textViewCsgoRank"
            android:layout_width="306dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/textViewCsgoRank"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/spinnerCsgoRank"
            android:background="@drawable/spinner_bg"
            android:layout_width="318dp"
            android:layout_height="53dp"
            android:autofillHints=""
            android:textSize="19sp" />

        <TextView
            android:id="@+id/textViewCsgoBio"
            android:layout_width="306dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/textViewCsgoDesc"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editTextCsgoDesc"
            android:inputType="textMultiLine"
            android:maxLength="80"
            android:gravity="center_horizontal"
            android:lines="3"
            android:minLines="1"
            android:maxLines="5"
            android:layout_height="wrap_content"
            android:layout_width="318dp"
            android:scrollbars="vertical"
            android:backgroundTint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:textSize="19sp"
            android:autofillHints="" />



        <Button
            android:id="@+id/buttonAddCsgo"
            android:layout_width="209dp"
            android:layout_height="65dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/button_bg"
            android:fontFamily="sans-serif-light"
            android:text="@string/buttonAddCsgo"
            android:textColor="#424242"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>