<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="10">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:padding="10dp">

            <TextView
                android:id="@+id/textViewAppName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                android:gravity="center"
                android:text="@string/appTitle"
                android:textColor="#FFFFFF"
                android:textSize="55sp"
                android:textStyle="bold" />


        </RelativeLayout>


        <TextView
            android:id="@+id/textViewNewAcc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/textViewLogin"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="326dp"
            android:layout_height="53dp"
            android:layout_below="@+id/textViewNewAcc"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:autofillHints=""
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="@string/editTextEmail"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="false"
            android:singleLine="false"
            android:textColor="#FFFFFF"
            android:textColorHint="#CCCCCC"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="326dp"
            android:layout_height="53dp"
            android:layout_marginTop="40dp"
            android:autofillHints=""
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="@string/editTextPassword"
            android:inputType="textPassword"
            android:textColor="#FFFFFF"
            android:textColorHint="#CCCCCC"
            android:textSize="20sp" />



        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="209dp"
            android:layout_height="57dp"
            android:layout_below="@+id/editTextPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:background="@drawable/button_bg"
            android:fontFamily="sans-serif-light"
            android:text="@string/buttonLogin"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#424242"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewForgot"
            android:layout_width="361dp"
            android:layout_height="34dp"
            android:layout_below="@+id/buttonLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:text="@string/textViewForgot"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewForgot"
            android:layout_marginTop="50dp"
            android:visibility="invisible" />


    </LinearLayout>


</ScrollView>